wip: challenge attachment service has back
